--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+  scrollbar-width: 0;
+}
+body::-webkit-scrollbar {
+  display: none;
+  scrollbar-width: 0;
+}
