--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 /** @format */
-
+@import url("https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
